# statistical-learning

./: .pdm-python  LICENSE  README.md  pyproject.toml  requirements.txt
src/statistical_learning/2-chapter/: chapter-2.ipynb
src/statistical_learning/3-chapter/: chapter-3.ipynb
