[project]
name = "statistical-learning"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gregorywmorris", email = "gwm1980@gmail.com"},
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "ipykernel>=6.29.4",
    "matplotlib>=3.8.4",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
